<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/tvPhrase"
        app:layout_constraintStart_toStartOf="@+id/tvPhrase"
        app:layout_constraintBottom_toTopOf="@+id/tvPhrase"
        android:text="Фраза:"/>
    <TextView
        android:id="@+id/tvPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        />
    <EditText
        android:id="@+id/etPhrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPhrase"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:hint="Введи фразу"/>

    <EditText
        android:id="@+id/etIgnore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введи игнорируемые значения"
        app:layout_constraintTop_toBottomOf="@+id/etPhrase"
        app:layout_constraintStart_toStartOf="parent"
        />


    <Button
        android:id="@+id/btnReverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/etPhrase"
        app:layout_constraintTop_toBottomOf="@+id/etIgnore"
        android:text="Перевернуть фразу"
        android:textSize="12sp"

        />

    <TextView
        android:id="@+id/des2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Результат:"
        app:layout_constraintTop_toBottomOf="@+id/btnReverse"
        app:layout_constraintLeft_toLeftOf="@+id/tvResult"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Результат"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/des2"
        />


</androidx.constraintlayout.widget.ConstraintLayout>